@@ -783,6 +783,34 @@ name|fieldNames
 argument_list|)
 return|;
 block|}
+DECL|method|getVersion
+specifier|public
+name|long
+name|getVersion
+parameter_list|()
+block|{
+return|return
+name|in
+operator|.
+name|getVersion
+argument_list|()
+return|;
+block|}
+DECL|method|isCurrent
+specifier|public
+name|boolean
+name|isCurrent
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+return|return
+name|in
+operator|.
+name|isCurrent
+argument_list|()
+return|;
+block|}
 block|}
 end_class
 
